# postura

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_CONTEXT.md  LICENSE  POSTURA_ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
docs/: architecture_diagram.html
evaluation/: baseline_static.py  ground_truth.py  latency_eval.py  postura_eval.py  report.py  self_analysis.py  severity_eval.py
src/postura/: cli.py  config.py  docker-compose.yml
src/postura/api/: app.py  nl_query.py  routes.py
src/postura/delivery/: github.py  history.py
src/postura/graph/: builder.py  connection.py  differ.py  queries.py  schema.py  updater.py
src/postura/ingest/: ast_parser.py  config_analyzer.py  dep_scanner.py  endpoint_extractor.py  sast_runner.py
src/postura/knowledge/: cve_loader.py  cwe_loader.py  embedder.py  owasp_loader.py  retriever.py
src/postura/models/: findings.py  graph.py  ingest.py
src/postura/reasoning/: agent.py  chain_discovery.py  severity_scorer.py  tools.py
src/postura/tasks/: __init__.py  analysis.py
src/postura/webhook/: event_router.py  receiver.py  repo_manager.py  scope_analyzer.py
tests/fixtures/vulnerable_flask_app/: GROUND_TRUTH.md  README.md  app.py  auth.py  config.py  db.py  models.py  requirements.txt  utils.py
tests/test_evaluation/: test_baseline.py
tests/test_graph/: test_e2e_phase2.py
tests/test_ingest/: test_ast_parser.py  test_endpoint_extractor.py  test_taint.py  test_webhook.py
tests/test_reasoning/: test_agent.py  test_delivery.py  test_knowledge.py  test_nl_query.py  test_tools.py
